修复 recall 不正确的 ID 直接崩溃的问题、优化检查更新逻辑